@@ -1,3 +1,9 @@
+2009-02-14  Sergey Udaltsov <svu@gnome.org>
+
+	* gnome-keyboard-properties-xkbltadd.c: fixed initial preview,
+	http://bugzilla.gnome.org/show_bug.cgi?id=550721
+	(actual patch by Matthias Clasen)
+
 2009-02-11  Matthias Clasen  <mclasen@redhat.com>
 
 	Bug 564998 – Visual bell settings went away
